compiler/fir/analysis-tests/testData/resolve/checkers/useBeforeStaticInitialization/topLevelUninitializedAccess1.kt

// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
val a = 5
<!UNINITIALIZED_PROPERTY!>val b = <!UNINITIALIZED_ACCESS!>A.b<!><!>

<!POSSIBLE_INITIALIZATION_DEADLOCK!>object A<!> {
    val b = a
}
